Fix input scrolling on small windows.

--- a/static/style/login.css
+++ b/static/style/login.css
@@ -11,7 +11,7 @@
 .loginform > input, .registerform > input, .resetform > input, .newpassform > input {
 	display: block;
 	font-size: 20px;
-	width: 100%;
+	width: 95%;
 	padding: 5px;
 	margin: 5px;
 }
